<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearlayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerateDocument"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/errorInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/errorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/document_name"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/font_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/select_font"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <RelativeLayout
            android:id="@+id/element1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp">

            <TextView
                android:id="@+id/font_size"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size" />


            <RelativeLayout
                android:id="@+id/numberpicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/font_size">


                <ImageView
                    android:id="@+id/imgMinus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="2dp"
                    android:src="@drawable/minus_black" />

                <TextView
                    android:id="@+id/txtNumbers"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:text="18"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_toEndOf="@+id/imgMinus"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:id="@+id/imgPlus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_toEndOf="@+id/txtNumbers"
                    android:src="@drawable/plus_black"
                    android:padding="2dp" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/element2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/element1"
            android:layout_marginStart="60dp">

            <TextView
                android:id="@+id/font_ink_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/font_ink_color"
                android:layout_marginStart="20dp" />


            <Spinner
                android:id="@+id/font_ink_color_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout

        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <RelativeLayout
            android:id="@+id/element3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp" >

            <TextView
                android:id="@+id/paper_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/paper_margin" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_button_paper_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_below="@+id/paper_margin"
                android:layout_marginStart="25dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/element4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/element3"
            android:layout_marginStart="73dp">

            <TextView
                android:id="@+id/paper_lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/paper_lines"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_button_paper_lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginStart="20dp"
                android:layout_below="@+id/paper_lines"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/upload_document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_file"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/upload_document"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/generate_document"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_document"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"/>

</LinearLayout>